# skaylr

./: LICENSE  README.md
Data/: notes&degrees.csv  notes&degrees.csv.import
Scenes/: Opening scene.tscn  Scale Info.gd
backend/: pyproject.toml  skaylr.db
backend/app/: database.py  main.py  models.py
frontend/Scenes/: C Major Info.tscn  Scale Menu.gd
